# ChangeLog for app-pda/gnome-pilot-conduits
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-pda/gnome-pilot-conduits/ChangeLog,v 1.14 2006/01/21 22:28:09 compnerd Exp $

*gnome-pilot-conduits-2.0.10-r2 (21 Jan 2006)

  21 Jan 2006; Saleem Abdulrasool <compnerd@gentoo.org>
  +files/gnome-pilot-conduits-2.0.10-invalid-linguas.patch,
  +gnome-pilot-conduits-2.0.10-r2.ebuild:
  Invalid linguas fix. Resolves bug #114650. Patch from Philippe Troin
  <phil@fifi.org>.

  19 Nov 2005; Alastair Tse <liquidx@gentoo.org>
  gnome-pilot-conduits-0.9.ebuild, gnome-pilot-conduits-2.0.10-r1.ebuild,
  gnome-pilot-conduits-2.0.12.ebuild, gnome-pilot-conduits-2.0.13.ebuild:
  fix homepage

*gnome-pilot-conduits-2.0.13 (17 May 2005)

  17 May 2005; Alastair Tse <liquidx@gentoo.org>
  +gnome-pilot-conduits-2.0.13.ebuild:
  version bump

*gnome-pilot-conduits-2.0.12 (03 Sep 2004)

  03 Sep 2004; Brandon Hale <tseng@gentoo.org>
  +gnome-pilot-conduits-2.0.12.ebuild:
  Version bump, drop patches merged upstream.

  24 Jul 2004; Alastair Tse <liquidx@gentoo.org>
  gnome-pilot-conduits-0.9.ebuild, gnome-pilot-conduits-2.0.10-r1.ebuild,
  -gnome-pilot-conduits-2.0.8.ebuild, -gnome-pilot-conduits-2.0.9.ebuild:
  fix SRC_URI (#56769)

  02 Jul 2004; Aron Griffis <agriffis@gentoo.org>
  gnome-pilot-conduits-2.0.10-r1.ebuild:
  sync IUSE (missing)

  14 Dec 2003; Lars Weiler <pylon@gentoo.org>
  gnome-pilot-conduits-2.0.10-r1.ebuild:
  Make stable on ppc

  13 Dec 2003; Brad House <brad_mssw@gentoo.org>
  gnome-pilot-conduits-2.0.10-r1.ebuild:
  mark stable on amd64

  21 Nov 2003; Jason Wever <weeve@gentoo.org>
  gnome-pilot-conduits-2.0.10-r1.ebuild:
  Marked stable on sparc.

*gnome-pilot-conduits-2.0.10-r1 (20 Sep 2003)

  20 Sep 2003; Alastair Tse <liquidx@gentoo.org>
  gnome-pilot-conduits-2.0.10-r1.ebuild, gnome-pilot-conduits-2.0.10.ebuild,
  files/gnome-pilot-conduits-2.0.10-memofile.patch: