@@ -1,6 +1,10 @@
 # ChangeLog for app-pda/gnome-pilot-conduits
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-pda/gnome-pilot-conduits/ChangeLog,v 1.14 2006/01/21 22:28:09 compnerd Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-pda/gnome-pilot-conduits/ChangeLog,v 1.15 2006/05/02 18:32:52 liquidx Exp $
+
+  02 May 2006; Alastair Tse <liquidx@gentoo.org>
+  gnome-pilot-conduits-2.0.13.ebuild:
+  stable bump for x86
 
 *gnome-pilot-conduits-2.0.10-r2 (21 Jan 2006)
 
